--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-welcome to actionexercies.com
+<!DOCTYPE html><html><head>   <meta charset="utf-8">  <meta name="viewport" content="width=device-width">  <title>actionexercises.com</title>
+ <style>   .intro {     color:red;   background-color:green;   font-family:courier;    }   div {     color:blue;   }      .header {     color:purple;     font-size: 40px;     font-family:verdana   }         body{background-color:black;   }                     }       <style>       </head><body>     <div class="header">actionexercises.com</div>    <div class="intro">  Hi my name is cristian im from mexico im 14 years old i like play soccer i have one brother and two systers <em>my</em> favorite     food is tacos<strong> im in 9th grade.</storng>   </div>
+    <div>  this is my new div.it's pretty neat.  </div>
