--- a/about.html
+++ b/about.html
@@ -1,1 +1,9 @@
-this is my about page.
+<!coctype html>
+<html>
+  <head>
+    <title>my about page</title>
+<head>
+<body>
+  this is my <em>about</em> page.
+  </body>
+  </html>
