--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>my about page</title>
-<head>
+<link rel="stylesheet" type="text/css" href="main.css">
+    <head>
 <body>
-  this is my <em>about</em> page.
+  <div> this is my <em>about</em> page.</div>
   </body>
   </html>
