--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>my about page</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<img src="http://actionexercies.com/header.png">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <head>
 <body>
   <div> this is my <em>about</em> page.</div>
