--- a/photos.html
+++ b/photos.html
@@ -9,7 +9,9 @@
   <style>
    .thumbnail {
       border:2px solid grey;
-      width:100px;}
+      width:100px;
+     float:left;
+    }
     .thumbnail:hover {
       border:2px solid black;}
     img {
